Started a minimal CSS for the website.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello Internet!
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <title>KB</title>
+        <link rel="stylesheet" href="css/minimal.css" title="minimal">
+    <body>
+        <h1>Kayman Brusse</h1>
+        <p><i class="light">/keɪ-mɛn/ /brəs-sə/ ► n.</i> a third year student
+        studying mathematics and computer science at the <a
+        href="https://www.utoronto.ca/">University of Toronto</a>.</p>
+    </body>
+</html>
