Added Projects page along with banners and updated css.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
         <title>KB</title>
         <link rel="stylesheet" href="css/minimal.css" title="minimal">
     <body>
-        <h1>Kayman Brusse</h1>
-        <p><i class="light">/keɪ-mɛn/ /brəs-sə/ ► n.</i> a third year student
-        studying mathematics and computer science at the <a
-        href="https://www.utoronto.ca/">University of Toronto</a>.</p>
+        <table>
+            <tr>
+                <td>
+                    <img src="resources/algonquin_banner_vertical.png"
+                    alt="Vertical Banner">
+                </td>
+                <td>
+                    <h1>Kayman Brusse</h1>
+                    <p><i class="light">/keɪ-mɛn/ /brəs-sə/ ► n.</i> a third
+                    year student studying mathematics and computer science 
+                    at the <a href="https://www.utoronto.ca/">University of 
+                    Toronto</a>.
+                    
+                    <ul class="horizontal">
+                        <li><a href="pages/projects.html">Projects</a></li>
+                        <li> | </li>
+                        <li><a href="resources/resume.pdf">Resume</a></li>
+                        <li> | </li>
+                        <li><a href="pages/aboutme.html">About Me</a></li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
