--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
                 </td>
                 <td>
                     <h1>Kayman Brusse</h1>
+
                     <p><i class="light">/keɪ-mɛn/ /brəs-sə/ ► n.</i> a third
                     year student studying mathematics and computer science 
                     at the <a href="https://www.utoronto.ca/">University of 
-                    Toronto</a>.
+                    Toronto</a>.</p>
                     
                     <ul class="horizontal">
                         <li><a href="pages/projects.html">Projects</a></li>
                         <li> | </li>
                         <li><a href="resources/resume.pdf">Resume</a></li>
                         <li> | </li>
-                        <li><a href="pages/aboutme.html">About Me</a></li>
+                        <li><a href="pages/aboutme.html">About</a></li>
                     </ul>
                 </td>
             </tr>
