Branched for new design.

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -13,12 +13,10 @@
                 </td>
                 <td>
                     <h1>About</h1>
-                    <p>My full name is Kayman Johannes Brusse. I am currently
-                    working at RBC Capital Markets, developing support
-                    tools for an ETF market-making application. <br>
+                    <p>My full name is Kayman Johannes Brusse.<br>
                     <br>
-                    I very much enjoy school, especially the courses I have
-                    taken in logic and theoretical computer science. I am
+                    I very much enjoy school, especially courses in maths, 
+                    logic and theoretical computer science. I am
                     focused on learning everything I can and want to make the
                     most of the time I have there.<br>
                     <br>
