Added Kickstart CSS and redid most of the website.

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,22 +13,21 @@
     </head>
 
     <body>
-
-        <!-- Nav Bar. -->
+        <!-- Nav Bar -->
         <div class="navbar navbar-dark navbar-fluid_fixed">
           <nav>
             <ul>
               <li>
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
               </li>
               <li>
-                <a href="pages/projects.html">Projects</a>
+                <a href="../pages/projects.html">Projects</a>
               </li>
               <li>
                 <a href="#">Resume</a>
               </li>
               <li>
-                <a href="pages/about.html">About</a>
+                <a href="../pages/about.html">About</a>
               </li>
             </ul>
             <ul> 
@@ -41,7 +40,21 @@
 
     <!-- Wrapper for Fluid-Fixed Layout -->
     <div class="wrapper">
-        <img src="resources/title_name_960.png" style="width:100%">
+
+        <!-- Title Image -->
+        <header class="page-heading">
+            <h1> <!-- H1 required for header line to appear -->
+                <img src="../resources/about_title_massive.png" style="width:100%">
+            </h1>
+        </header>
+
+        <h1>
+            <span>Kayman Johannes Brusse</span>
+        </h1>
+
+        <p> I am a third year student studying mathematics and 
+        computer science at the <a href="https://www.utoronto.ca/">University of Toronto</a>.
+        </p>
     </div>
 
     <!-- Kickstart JS Scripts -->
