Moved Kickstart CSS to local folders.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Kickstart CSS -->
-        <link rel="stylesheet" href="http://cdn.everything.io/kickstart/3.x/css/kickstart.min.css" />
+        <link rel="stylesheet" href="../css/kickstart.min.css">
 
     </head>
 
@@ -68,6 +68,6 @@
     </div>
 
     <!-- Kickstart JS Scripts -->
-    <script type="text/javascript" src="http://cdn.everything.io/kickstart/3.x/js/kickstart.min.js"></script>
+    <script type="text/javascript" src="../js/kickstart.min.js"></script>
     </body>
 </html>
