Added some content. NavBar hovers are the only big thing left to fix.

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
           <nav>
             <ul>
               <li>
-                <a href="index.html">Home</a>
+                <a class="styled" href="index.html">Home</a>
               </li>
               <li>
-                <a href="#about">About</a>
+                <a class="styled" href="#about">About</a>
               </li>
               <li>
-                <a href="#projects">Projects</a>
+                <a class="styled" href="#projects">Projects</a>
               </li>
               <li>
-                <a href="#">Resume</a>
+                <a class="styled" href="#">Resume</a>
               </li>
             </ul>
           </nav>
@@ -40,15 +40,44 @@
 
         <div class="section-container-dark">
             <section id="about">
-                <h1>About</h1>
-                <p>This is the section of the website that is about me!</p>
+                <h2>About</h2>
+                <p>I am a third year student studying mathematics and computer
+                science at the <a class="styled" href="https://www.utoronto.ca/">University of
+                Toronto</a>. </p>
             </section>
         </div>
 
         <div class="section-container">
             <section id="projects">
                 <h2>Projects</h2>
-                <p>This section is about all of my projects!</p>
+                <p>
+                <a class="styled" href="https://bitbucket.org/kmanbrusse/">
+                https://bitbucket.org/kmanbrusse/</a>
+                </p>
+                <h3>Evolution of Light</h3>
+                <p> A Roguelike video-game written in Python using the <a
+                class="styled"
+                href="https://docs.python.org/2/howto/curses.html">curses</a>
+                library. The player must navigate through narrow dungeons,
+                searching for more advanced technologies to use as a
+                light-source that will fend off monsters.
+                </p>
+                <p> The game is displayed onto a terminal in ASCII graphics.
+                Noteable features are randomly generated dungeons and a
+                field-of-vision algorithm. I am currently working on combat
+                including light-source mechanics. 
+                </p>
+                <h3>Personl Website</h3>
+                <p>
+                This website was created for the purpose of displaying my work
+                as well as learning basic web development. I created my own 
+                responsive CSS using <a class="styled" 
+                href="http://sass-lang.com/">Sass</a>, although I was largely 
+                inspired by <a class="styled"
+                href="http://getskeleton.com/">Skeleton</a> and <a
+                class="styled" href="http://getbootstrap.com/">Boostrap</a>.
+                Try resizing this page or opening it on your phone!
+                </p>
             </section>
         </div>
     </div>
