Fixed navbar jumping.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </div>
 
         <div class="section-container-dark">
-            <section id="about">
+            <span class="anchor" id="about"></span>
+            <section>
                 <h2>About</h2>
                 <p>I am a third year student studying mathematics and computer
                 science at the <a class="styled" href="https://www.utoronto.ca/">University of
@@ -47,7 +48,8 @@
         </div>
 
         <div class="section-container">
-            <section id="projects">
+            <span class="anchor" id="projects"></span>
+            <section>
                 <h2>Projects</h2>
                 <p>
                 <a class="styled" href="https://bitbucket.org/kmanbrusse/">
