Navbar Hamburger menu now transforms into a cross when clicked. Still need to animate dropdown, should maybe refactor how that works.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                     <!-- Dropdown Menu Buttom -->
                     <li class="dropdown">
                         <a href="javascript:void(0)"
-                        onclick="toggle_navbar_menu()"
-                        class="styled">☰</a>
+                        onclick="toggle_navbar_menu()">
+                            <span class="burger"></span>
+                            <span class="burger"></span>
+                            <span class="burger"></span>
+                        </a>
                     </li>  
 
                     <!-- Dropdown Menu Items -->
