--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <body>
 
-        <!-- Nav Bar. -->
-        <div class="navbar" id="top_navbar">
+        <!-- Nav Bar -->
+        <div class="navbar-container" id="top_navbar">
             <nav>
                 <ul>
                     
@@ -29,26 +29,29 @@
                     </li>
 
                     <!-- Dropdown Menu Buttom -->
-                    <li class="dropdown">
-                        <a href="javascript:void(0)"
-                        onclick="toggle_navbar_menu()">
-                            <span class="burger"></span>
-                            <span class="burger"></span>
-                            <span class="burger"></span>
-                        </a>
-                    </li>  
+                    <div class="navbar-burger-menu">
+                        <li>
+                            <a href="javascript:void(0)"
+                            onclick="toggle_navbar_menu()">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </a>
+                        </li>  
+                    </div>
 
                     <!-- Dropdown Menu Items -->
-                    <li class="menu_item">
-                        <a class="styled" href="#about">About</a>
-                    </li>
-                    <li class="menu_item">
-                        <a class="styled" href="#projects">Projects</a>
-                    </li>
-                    <li class="menu_item">
-                        <a class="styled" href="#">Resume</a>
-                    </li>
-
+                    <div class="navbar-menu-items">
+                        <li>
+                            <a class="styled" href="#about">About</a>
+                        </li>
+                        <li>
+                            <a class="styled" href="#projects">Projects</a>
+                        </li>
+                        <li>
+                            <a class="styled" href="#">Resume</a>
+                        </li>
+                    </div>
                 </ul>
             </nav>
         </div>
@@ -93,14 +96,23 @@
                 <p> A Roguelike video-game written in Python using the <a
                 class="styled"
                 href="https://docs.python.org/2/howto/curses.html">curses</a>
-                library. The player must navigate through narrow dungeons,
-                searching for more advanced technologies to use as a
-                light-source that will fend off monsters.</p>
+                library. Players will need to navigate a dungeon, fending off
+                monsters as they delve deeper and deeper. The focus of the game
+                is to progress through a timeline of lighting technology which
+                will allow players to take manipluate the light that
+                illuminates the dungeon levels. How to player chooses to light
+                up the environment will determine if they live or die.</p>
 
-                <p> The game is displayed onto a terminal in ASCII graphics.
-                Noteable features are randomly generated dungeons and a
-                field-of-vision algorithm. I am currently working on combat
-                including light-source mechanics. </p>
+                <p> The game is still under development. Most basic features of
+                a roguelike game are implemented, with a special focus on field
+                of vision which will be used extensively as a game mechanic
+                along with the lighting technologies. Next steps are to smooth
+                out NPC combat, as well as some basic light mechanics.</p>
+
+                <p> You can download the <a class="styled"
+                href="https://bitbucket.org/kmanbrusse/evolution_of_light">source</a> 
+                to play the game of see what it's like <a class="styled"
+                href="#">here</a>.</p>
                 
                 <h3>Personal Website</h3>
                 <p>This website was created for the purpose of displaying my work
