Fixed animation and proof-read content.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     </div>
 
                     <!-- Dropdown Menu Items -->
-                    <div class="navbar-menu-items">
+                    <div class="navbar-menu-items"
+                    onclick="close_navbar_menu()">
                         <li>
                             <a class="styled" href="#about">About</a>
                         </li>
@@ -85,9 +86,8 @@
                     src="resources/about_title_768.png"
                     alt="Me at The Crack in Killarney">
 
-                    <p>When I'm not absorbed in my school work you can probably find me
-                    enjoying the great outdoors, reading, or working
-                    something that I've listed below. </p>
+                    <p>When I'm not at school you can find me enjoying the great 
+                    outdoors, reading, or working something that I've listed below. </p>
                     </div>
                 </section>
             </div>
@@ -104,7 +104,7 @@
                     
                     <h3>Evolution of Light</h3>
 
-                    <p> A Roguelike video-game written in Python using the <a
+                    <p> A Rogue-like video-game written in Python using the <a
                     class="styled"
                     href="https://docs.python.org/2/howto/curses.html">curses</a>
                     library. Players will need to navigate a dungeon, fending off
@@ -117,15 +117,16 @@
 
                     <div class="col-1-2"> 
                     <p> The game is still under development. Most basic features of
-                    a roguelike game are implemented, with a special focus on field
+                    a rogue-like game are implemented, with a special focus on field
                     of vision which will be used extensively as a game mechanic
                     along with the lighting technologies. Next steps are to smooth
                     out NPC combat, as well as some basic light mechanics.</p>
 
                     <p> You can download the <a class="styled"
                     href="https://bitbucket.org/kmanbrusse/evolution_of_light">source</a> 
-                    to play the game or see what it's like <a class="styled"
-                    href="#">here</a>.</p>
+                    to play the game. </p>
+                    <!-- or see what it's like <a class="styled"
+                    href="#">here</a>.</p> -->
                     </div>
                     
                     <div class="col-1-2">
