Added photos of mobile website. Some css formatting.

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
                     <h2>Projects</h2>
 
-                    <p><a class="styled" href="https://bitbucket.org/kmanbrusse/">
-                        https://bitbucket.org/kmanbrusse/</a></p>
+                    <p><a class="styled" href="https://github.com/kaymanb/">
+                        github.com/kaymanb/</a></p>
                     
                     <h3>Evolution of Light</h3>
 
@@ -135,7 +135,7 @@
                     out NPC combat, as well as some basic light mechanics.</p>
 
                     <p> You can download the <a class="styled"
-                    href="https://bitbucket.org/kmanbrusse/evolution_of_light">source</a> 
+                    href="https://github.com/kaymanb/evolution_of_light">source</a> 
                     to demo the game. </p>
                     <!-- or see what it's like <a class="styled"
                     href="#">here</a>.</p> -->
@@ -145,7 +145,7 @@
                     <img src="resources/eol_scrnsht_700.png">
                     </div>
                     
-                    <div class="col-1-1">
+                    <div class="col-1-2 right">
 
                     <h3>Personal Website</h3>
                     <p>This website was created for the purpose of displaying my work
@@ -156,7 +156,14 @@
                     href="http://getskeleton.com/">Skeleton</a> and <a
                     class="styled" href="http://getbootstrap.com/">Boostrap</a>.
                     Try resizing this page or opening it on your phone!</p>
+                    </div>
 
+                    <div class="col-1-2">
+                        <div class="merged">
+                        <img src="resources/phone_example_1.png">
+                        <img src="resources/phone_example_2.png">
+                        <img src="resources/phone_example_3.png">
+                        </div>
                     </div>
                 </section>
             </div>
