--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     alt="Me at The Crack in Killarney">
 
                     <p>When I'm not at school you can find me enjoying the great 
-                    outdoors, reading, or working something that I've listed
+                    outdoors, reading, or working on something that I've listed
                     below. The above picture is me looking over the edge of <a
                     class="styled"
                     href="http://www.killarneyoutfitters.com/trip-planning/hike-crack.php">"The
@@ -122,17 +122,19 @@
                     library. Players will need to navigate a dungeon, fending off
                     monsters as they delve deeper and deeper. The focus of the game
                     is to progress through a timeline of lighting technology which
-                    will allow players to take manipluate the light that
+                    will allow players to take control of the light that
                     illuminates the dungeon levels. How to player chooses to light
-                    up the environment will determine if they live or die.</p>
+                    up the environment will determine whether they live or die.</p>
                     </div>
 
                     <div class="col-1-2"> 
                     <p> The game is still under development. Most basic features of
                     a rogue-like game are implemented, with a special focus on field
                     of vision which will be used extensively as a game mechanic
-                    along with the lighting technologies. Next steps are to smooth
-                    out NPC combat, as well as some basic light mechanics.</p>
+                    along with the lighting technologies. The next steps will
+                    be to smooth out NPC combat, as well as add some basic light 
+                    mechanics.</p>
+
 
                     <p> You can download the <a class="styled"
                     href="https://github.com/kaymanb/evolution_of_light">source</a> 
