Good lord more typos, please be the last commit.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     monsters as they delve deeper and deeper. The focus of the game
                     is to progress through a timeline of lighting technology which
                     will allow players to take control of the light that
-                    illuminates the dungeon levels. How to player chooses to light
+                    illuminates the dungeon levels. How the player chooses to light
                     up the environment will determine whether they live or die.</p>
                     </div>
 
