--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                     <p>I am a third year student studying mathematics and computer
                     science at the <a class="styled" href="https://www.utoronto.ca/">
                     University of Toronto</a>. At school I'm taking courses in
-                    pure maths, logic and theoretical computer science, while
+                    pure math, logic, and theoretical computer science, while
                     trying to pick up some more practical knowledge on my own
                     time. As a developer, I'm most interested in projects that
-                    use maths and algorithms in interesting ways.</p>
+                    use math and algorithms in interesting ways.</p>
 
                     <p>Really, I just like to solve problems.</p>
 
